--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -18,14 +18,6 @@
   font-size: 15px;
 }
 
-button {
-  display: inline-block;
-  border: none;
-  text-decoration: none;
-  cursor: pointer;
-  padding: 0;
-}
-
 /* typography */
 
 body {
@@ -77,6 +69,7 @@ h4 {
   display: flex;
   justify-items: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .light-mode-image {
@@ -87,6 +80,7 @@ h4 {
 
 .light-mode-text {
   letter-spacing: 2.5px;
+  color: var(--light-mode-gray);
 }
 
 /* search */
@@ -100,6 +94,7 @@ h4 {
   align-items: center;
   padding: 0 0.466rem 0 0.466rem;
   box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.198567);
+  position: relative;
 }
 
 .username-input {
@@ -107,6 +102,12 @@ h4 {
   padding: 0;
   width: 195px;
   height: 25px;
+  outline: none;
+  color: #222731;
+  font-size: 1.2rem;
+  line-height: 1.666rem;
+  caret-color: var(--bright-blue);
+  cursor: pointer;
 }
 
 .username-input::placeholder {
@@ -117,10 +118,20 @@ h4 {
   text-align: center;
 }
 
+.error {
+  display: none;
+  color: #f74646;
+  font-weight: bold;
+  font-size: 1rem;
+  line-height: 1.48rem;
+  position: absolute;
+  left: 9.5rem;
+}
+
 .search-icon {
   width: 20.05px;
   height: 20px;
-  margin-right: auto;
+  margin: 0 0.5rem 0 0.5rem;
 }
 
 .search-btn {
@@ -134,6 +145,11 @@ h4 {
   height: 46px;
   border-radius: 15px;
   margin-left: auto;
+  display: inline-block;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 0;
 }
 
 /* user card */
@@ -249,19 +265,25 @@ h4 {
   .search-icon {
     width: 24px;
     height: 24px;
+    margin: 0 1rem 0 0;
   }
+
   .search-btn {
     width: 106px;
     height: 50px;
   }
 
+  .error {
+    left: 23rem;
+  }
+
   .username-input {
-    width: 254px;
-    margin-left: -8rem;
+    width: 375px;
   }
 
   .username-input::placeholder {
     font-size: 1.2rem;
+    text-align: left;
   }
 
   .user-card-container {
@@ -361,6 +383,14 @@ h4 {
     width: 730px;
   }
 
+  .username-input {
+    width: 525px;
+  }
+
+  .error {
+    left: 34rem;
+  }
+
   .user-card-container {
     height: 444px;
     position: relative;
@@ -403,5 +433,39 @@ h4 {
 
   .detail-item {
     padding: 1rem 0 1rem 0;
+    cursor: pointer;
   }
+}
+
+/* not available  */
+
+.not-available-light {
+  color: #a4b4cd;
+}
+
+/* dark mode */
+
+.not-available-dark {
+  color: #8e95a3;
+}
+
+/* hover active light */
+@media (hover: hover) and (pointer: fine) {
+  .search-btn:hover,
+  .search-btn:active {
+    background-color: #60abff;
+  }
+
+  .detail-item:hover,
+  .detail-item:active {
+    text-decoration: underline;
+  }
+}
+
+.light-mode-text-active {
+  color: #222731;
+}
+
+.light-mode-image-active {
+  content: url("assets/icon-moon-active.svg");
 }
